# cpSZ

./: CMakeLists.txt  README.md  build_script.sh
include/: sz3_utils.hpp  sz_compress_3d.hpp  sz_compress_block_processing.hpp  sz_compress_cp_preserve_2d.hpp  sz_compress_cp_preserve_3d.hpp  sz_compress_pwr.hpp  sz_compression_utils.hpp  sz_cp_preserve_utils.hpp  sz_decompress_3d.hpp  sz_decompress_block_processing.hpp  sz_decompress_cp_preserve_2d.hpp  sz_decompress_cp_preserve_3d.hpp  sz_decompress_pwr.hpp  sz_decompression_utils.hpp  sz_def.hpp  sz_optimize_quant_intervals.hpp  sz_prediction.hpp  sz_regression_utils.hpp
src/: CMakeLists.txt  sz_compress_3d.cpp  sz_compress_cp_preserve_2d.cpp  sz_compress_cp_preserve_2d_bilinear.cpp  sz_compress_cp_preserve_3d.cpp  sz_compress_cp_preserve_sos_2d.cpp  sz_compress_cp_preserve_sos_3d.cpp  sz_compress_pwr.cpp  sz_compression_utils.cpp  sz_decompress_3d.cpp  sz_decompress_cp_preserve_2d.cpp  sz_decompress_cp_preserve_3d.cpp  sz_decompress_pwr.cpp  sz_decompression_utils.cpp
test/: CMakeLists.txt  cp_extraction_2d.cpp  cp_extraction_2d_sos.cpp  cp_extraction_3d.cpp  cp_extraction_3d_sos.cpp  cp_extraction_3d_unstructured.cpp  sz_compress_1d_with_eb.cpp  sz_compress_2d_with_eb.cpp  sz_compress_3d_with_eb.cpp  sz_compress_cp_preserve_2d_test.cpp  sz_compress_cp_preserve_3d_test.cpp  sz_compress_cp_preserve_3d_unstructured_test.cpp  sz_compress_test.cpp  sz_compress_test_with_eb.cpp  utils.hpp
